2007-11-12  Kevin Ryde  <user42@zip.com.au>

	* progmodes/compilation-perl.el:
	* progmodes/compilation-weblint.el: New files.

2007-11-11  Juanma Barranquero  <lekktu@gmail.com>

	* international/iso-cvt.el (iso-translate-conventions): Doc fix.
	(iso-aggressive-german-trans-tab, iso-conservative-german-trans-tab)
	(iso-tex2iso-trans-tab, iso-gtex2iso-trans-tab): Reflow docstring.
	(iso-spanish, iso-german, iso-iso2tex, iso-tex2iso, iso-gtex2iso)
	(iso-iso2gtex, iso-iso2duden, iso-iso2sgml, iso-sgml2iso):
	Rewrite in active voice.

2007-11-11  Tassilo Horn  <tassilo@member.fsf.org>

	* doc-view.el: Add comments about isearch support.

2007-11-11  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el (vc-start-entry): Fix setting the in the case the function
	is called from vc-dired.  Use when instead of if where appropriate.

2007-11-11  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* ps-print.el (ps-do-despool): Do not force ps-lpr-switches
	to be a list.
	(ps-begin-job): Error if ps-lpr-switches is not a list.

2007-11-11  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* faces.el (face-normalize-spec): Remove function.
	(frame-set-background-mode): Undo last change.

2007-11-10  Jason Rumney  <jasonr@gnu.org>

	* w32-fns.el: Sync charset names with setup-default-fontset.
	Append "-1" where second part missing.

2007-11-10  Juri Linkov  <juri@jurta.org>

	* isearch.el (isearch-mode-end-hook, isearch-mode-end-hook-quit):
	Fix docstring.  Reported by Leo <sdl.web@gmail.com>.

	* custom.el (custom-note-var-changed): Remove the `interactive'
	spec from this new non-interactive function.

2007-11-10  Tassilo Horn  <tassilo@member.fsf.org>

	* doc-view.el (doc-view-mode-map, doc-view-menu)
	(doc-view-pdf->txt-sentinel): Adapt to new search UI.
	(doc-view-search-backward): New function.
	(doc-view-search): Query new regexp if prefix arg is given, else
	jump to next/previous match.
	(doc-view-mode): Handle compressed files.
	(jka-compr): Required for compressed files.
